[gd_scene load_steps=5 format=3 uid="uid://c7qrnmofrtfpg"]

[ext_resource type="Script" path="res://Scenes/MainMenu/MainMenu.gd" id="1_wm27k"]
[ext_resource type="StyleBox" uid="uid://dfxjc5nwqsqm6" path="res://Assets/Styles/Buttons.tres" id="3_ihkor"]
[ext_resource type="StyleBox" uid="uid://ccyyrr84lls1t" path="res://Assets/Styles/HoverButtons.tres" id="4_mqap7"]
[ext_resource type="Texture2D" uid="uid://dlbeo7q5c4fwb" path="res://Assets/Img/MainMenuBackground.webp" id="4_obq4s"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wm27k")

[node name="MainMenuBackground" type="Sprite2D" parent="."]
texture = ExtResource("4_obq4s")
centered = false

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 351.0
offset_top = -33.0
offset_right = -371.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_ihkor")
theme_override_styles/hover = ExtResource("4_mqap7")
text = "Start"

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 2
theme_override_styles/normal = ExtResource("3_ihkor")
theme_override_styles/hover = ExtResource("4_mqap7")
text = "Exit"

[node name="OnHoverButtons" type="AudioStreamPlayer2D" parent="Buttons"]

[connection signal="mouse_entered" from="Buttons/StartButton" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="Buttons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="Buttons/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
